# flask-poetry

./: Jenkinsfile  README.md  docker-compose.tmpl  pyproject.toml  server.py
ansible/: hosts
ansible/roles/setup-app/files/flask-poetry-app/: Dockerfile  pyproject.toml  readme.md  server.py
ansible/roles/setup-app/files/flask-poetry-app/nginx/: flask-poetry-app.conf
ansible/roles/setup-app/tasks/: main.yml
ansible/roles/setup-monitoring-server/files/etc/monitoring/prometheus/: prometheus.yml
terraform-flask-poetry-app/: instance.tf  main.tf  outputs.tf  roles.tf  sg.tf  variables.tf
terraform-monitoring-server/: .terraform.lock.hcl
