[project]
name = "server"
version = "1.0.0"
description = "Simple flask with poetry"
authors = [
    {name = "anetsesia01"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"